<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.DictionaryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/serach_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/search_btn"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/black"
            android:hint="Search word here"
            android:padding="12dp" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:text="Search" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/my_primary"
            android:visibility="gone" />


    </RelativeLayout>

    <TextView
        android:id="@+id/word_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#1565C0"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="word" />

    <TextView
        android:id="@+id/phonetic_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        tools:text="/t e s t/" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/meaning_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>