...
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="16dp"
    android:background="@drawable/rounded_corner">

    <EditText
        android:id="@+id/english_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="#F5F5F5"
        android:ems="10"
        android:inputType="text"
...
