<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="175dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/intro_top_right"
        tools:src="@drawable/intro_top_right" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="211dp"
        android:layout_height="185dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        app:srcCompat="@drawable/intro_logo"
        tools:src="@drawable/intro_logo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/intro_left_bottom"
        tools:src="@drawable/intro_left_bottom" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Evaluate Your Leaning Experience"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sign Up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password2" />

    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="Email"
        android:inputType="text"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/sign_up_name"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="Name"
        android:inputType="text"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_up_email"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:hint="Password"
        android:inputType="text"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:password="true"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email" />

    <EditText
        android:id="@+id/sign_up_password2"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:hint="Re-enter Password"
        android:inputType="text"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:password="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_up_password"
        app:layout_constraintTop_toTopOf="@+id/sign_up_password" />

    <TextView
        android:id="@+id/login_redirect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="Already an user? Login"
        android:textColor="@color/my_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_up_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>